# flask-tutorial

./: .gitignore  pyproject.toml  requirements.txt
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/blog/: index.html
tests/: conftest.py
